# MC-Project

./: README.md  build.gradle.kts  settings.gradle.kts
app/: .gitignore  build.gradle.kts
app/src/androidTest/java/com/mobilecomputing/videoconferencingapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/mobilecomputing/videoconferencingapp/: MainActivity.kt
app/src/main/java/com/mobilecomputing/videoconferencingapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/io/getstream/webrtc/sample/compose/: MainActivity.kt  WebRTCApp.kt
app/src/main/kotlin/io/getstream/webrtc/sample/compose/ui/components/: TranscriptionBox.kt  VideoRenderer.kt  VideoTextureViewRenderer.kt
app/src/main/kotlin/io/getstream/webrtc/sample/compose/ui/screens/: SplashScreen.kt
app/src/main/kotlin/io/getstream/webrtc/sample/compose/ui/theme/: Theme.kt  Type.kt
app/src/main/kotlin/io/getstream/webrtc/sample/compose/webrtc/: BackgroundBlurProcessor.kt  MyAudioProcessor.kt  SignalingClient.kt  TranscriptionManager.kt
app/src/main/kotlin/io/getstream/webrtc/sample/compose/webrtc/audio/: AudioDevice.kt  AudioHandler.kt  AudioManagerAdapterImpl.kt  AudioSwitch.kt
app/src/main/res/drawable/: ic_transcription_on.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/mobilecomputing/videoconferencingapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: Application.kt  SessionManager.kt
(+14 files in other folders)
